--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.navbar-expand {
+/* .navbar-expand {
   justify-content: space-between !important;
 }
 .search {
@@ -6,4 +6,23 @@
 }
 .mr-sm-2 {
   margin-right: 10% !important;
+} */
+
+.navbar-expand {
+  justify-content: space-between !important;
+}
+
+.search {
+  display: flex;
+}
+
+.mr-sm-2 {
+  margin-right: 10% !important;
+}
+
+/* Add the following media query to adjust the margin-right for smaller screens */
+@media (max-width: 768px) {
+  .mr-sm-2 {
+    margin-right: 0 !important;
+  }
 }
