--- a/src/components/BlogPostPage.css
+++ b/src/components/BlogPostPage.css
@@ -1,3 +1,24 @@
+/* .comment-list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.comment {
+  margin-bottom: 20px;
+}
+
+.comment-header {
+  display: flex;
+  align-items: center;
+}
+
+.profile-image {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  margin-right: 10px;
+} */
+
 .comment-list {
   list-style-type: none;
   padding: 0;
