--- a/src/components/Favorites.css
+++ b/src/components/Favorites.css
@@ -1,12 +1,12 @@
-.favorites {
+/* .favorites {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
 }
 
 .favCard {
-  padding: 15px; /* JUST TO LOOK COOL */
-  border: 1px solid #eee; /* JUST TO LOOK COOL */
+  padding: 15px;
+  border: 1px solid #eee;
   box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px;
   transition: all 0.3s ease-in-out;
 }
@@ -19,4 +19,34 @@
 .card {
   flex: 0 0 calc(33.33% - 10px);
   margin-bottom: 20px;
+} */
+
+.favorites {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.favCard {
+  padding: 15px;
+  border: 1px solid #eee;
+  box-shadow: rgba(0, 0, 0, 0.06) 0px 2px 4px;
+  transition: all 0.3s ease-in-out;
+}
+
+.favCard:hover {
+  box-shadow: rgba(0, 0, 0, 0.22) 0px 19px 43px;
+  transform: translate3d(0px, -1px, 0px);
+}
+
+.card {
+  flex: 0 0 calc(33.33% - 10px);
+  margin-bottom: 20px;
+}
+
+/* Add the following media query to adjust the flex layout for smaller screens */
+@media (max-width: 768px) {
+  .card {
+    flex: 0 0 calc(50% - 10px);
+  }
 }
