--- a/src/components/MainPage.css
+++ b/src/components/MainPage.css
@@ -5,8 +5,9 @@
 .mainPage {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   padding: 15px;
+  gap: 1 rem;
 }
 
 .blogCard {
